selenium is runnable now. still need to change when the mainpage display "public" instead of "admin"

--- a/selenium/Chinese/RemoveTestContent.html
+++ b/selenium/Chinese/RemoveTestContent.html
@@ -27,7 +27,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>assertTextPresent</td>
 	<td>test123455</td>
 	<td></td>
 </tr>
@@ -82,13 +82,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Last Page&quot;]</td>
+	<td>assertTextPresent</td>
+	<td>test123455</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=//input[@value=&quot;Delete Content&quot;])[3]</td>
+	<td>xpath=//input[@value=&quot;Delete Content&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -97,21 +97,15 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>test123455</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Last Page&quot;]</td>
+	<td>link=注销当前用户</td>
 	<td></td>
 </tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>test123455</td>
-	<td></td>
-</tr>
-
 </tbody></table>
 </body>
 </html>
