"Public" changed to ”公共“

--- a/selenium/Chinese/Login.html
+++ b/selenium/Chinese/Login.html
@@ -133,7 +133,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编admin的空间----精选优质新闻平台、管理常用网页连接、朋友团队共享信息、等等，请你帮我想想这个平台还能够做什么用？</td>
+	<td>欢迎来大主编公共的空间----精选优质新闻平台、管理常用网页连接、朋友团队共享信息、等等，请你帮我想想这个平台还能够做什么用？</td>
 	<td></td>
 </tr>
 <tr>
@@ -328,7 +328,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编admin的空间----精选优质新闻平台、管理常用网页连接、朋友团队共享信息、等等，请你帮我想想这个平台还能够做什么用？</td>
+	<td>欢迎来大主编公共的空间----精选优质新闻平台、管理常用网页连接、朋友团队共享信息、等等，请你帮我想想这个平台还能够做什么用？</td>
 	<td></td>
 </tr>
 <tr>
