--- a/selenium/Chinese/Login.html
+++ b/selenium/Chinese/Login.html
@@ -308,13 +308,8 @@
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>spring</td>
+	<td>Simon&amp;Nicholas</td>
 	<td></td>
-</tr>
-<tr>
-	<td>addSelection</td>
-	<td>id=_tags_id</td>
-	<td>label=spring</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
