--- a/selenium/Chinese/add_remove_content.html
+++ b/selenium/Chinese/add_remove_content.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Create new 个人空间的标签&quot;]</td>
+	<td>css=img[alt=&quot;Create new 个人空间标签&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -85,11 +85,6 @@
 	<td>type</td>
 	<td>id=_sourceURL_id</td>
 	<td>http://localhost/testData</td>
-</tr>
-<tr>
-	<td>addSelection</td>
-	<td>id=_tags_id</td>
-	<td>label=test_tag_123455</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
