--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -73,12 +73,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>内容标题 :</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>新加一个标签！</td>
+	<td>网页内容标题 * :</td>
 	<td></td>
 </tr>
 <tr>
@@ -172,13 +167,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>新加一个标签！</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Create new 个人空间的标签&quot;]</td>
+	<td>css=img[alt=&quot;Create new 个人空间标签&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -204,16 +194,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>link=我来加一个！</td>
-	<td></td>
-</tr>
-<tr>
-	<td>addSelection</td>
-	<td>id=_tags_id</td>
-	<td>label=taoTestForCreatingTag</td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>taoTestForCreatingTag</td>
 	<td></td>
 </tr>
 <tr>
@@ -304,11 +284,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>id=proceed</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>Simon&amp;Nicholas</td>
 	<td></td>
 </tr>
 <tr>
