--- a/selenium/Chinese/mainpage_display.html
+++ b/selenium/Chinese/mainpage_display.html
@@ -53,7 +53,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>其他</td>
+	<td>未分类内容</td>
 	<td></td>
 </tr>
 <tr>
@@ -139,6 +139,11 @@
 <tr>
 	<td>open</td>
 	<td>/bigbang/tao/</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>阿苏阿南</td>
 	<td></td>
 </tr>
 <tr>
