I decided to seprate version, because Chinese never go mix with English or Japanese. so the tag need not to be English and mapping to resource file, they are just the tags string what user inputted and saved in DB.

--- a/selenium/Chinese/add_remove_content.html
+++ b/selenium/Chinese/add_remove_content.html
@@ -92,23 +92,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>test_tag_123455 tao</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>http://localhost/testData</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>test123455</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
-	<td>link=大主编</td>
+	<td>css=img</td>
 	<td></td>
 </tr>
 <tr>
@@ -207,7 +192,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertConfirmation</td>
+	<td>verifyConfirmation</td>
 	<td>Are you sure want to delete this item?</td>
 	<td></td>
 </tr>
