--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -252,7 +252,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertConfirmation</td>
+	<td>verifyConfirmation</td>
 	<td>Are you sure want to delete this item?</td>
 	<td></td>
 </tr>
