--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -128,7 +128,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编公共的空间----精选优质新闻平台、管理常用网页连接、朋友团队共享信息、等等，请你帮我想想这个平台还能够做什么用？</td>
+	<td>欢迎来大主编公共的空间----拣选推荐新闻、管理书签连接、朋友信息共享、组建个人网站、等等，请你帮我想想这个平台还能够做什么用？</td>
 	<td></td>
 </tr>
 <tr>
@@ -298,7 +298,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编公共的空间----精选优质新闻平台、管理常用网页连接、朋友团队共享信息、等等，请你帮我想想这个平台还能够做什么用？</td>
+	<td>欢迎来大主编公共的空间----拣选推荐新闻、管理书签连接、朋友信息共享、组建个人网站、等等，请你帮我想想这个平台还能够做什么用？</td>
 	<td></td>
 </tr>
 <tr>
