no worry about usre will delet other's content. only loged in user can see the tags and tags. and can see only their own.

--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -118,12 +118,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>注销当前用户</td>
+	<td>退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -133,7 +133,7 @@
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>注销当前用户</td>
+	<td>退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -203,7 +203,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -263,7 +263,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -288,7 +288,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>注销当前用户</td>
+	<td>退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -303,7 +303,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 </tbody></table>
