--- a/selenium/Chinese/hire_fire_editor.html
+++ b/selenium/Chinese/hire_fire_editor.html
@@ -138,7 +138,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -166,7 +166,6 @@
 	<td>css=img</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
