--- a/selenium/Chinese/add_remove_content.html
+++ b/selenium/Chinese/add_remove_content.html
@@ -118,12 +118,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>注销当前用户</td>
+	<td>退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 <tr>
@@ -203,7 +203,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
 </tbody></table>
