--- a/selenium/Chinese/reset.html
+++ b/selenium/Chinese/reset.html
@@ -13,10 +13,9 @@
 </thead><tbody>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=注销当前用户</td>
+	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
