the content will not be show if setted authorities.

--- a/selenium/Chinese/add_remove_content.html
+++ b/selenium/Chinese/add_remove_content.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=大主编</td>
+	<td>link=主页</td>
 	<td></td>
 </tr>
 <tr>
@@ -93,7 +93,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
 	<td></td>
 </tr>
 <tr>
