--- a/selenium/Chinese/hire_fire_editor.html
+++ b/selenium/Chinese/hire_fire_editor.html
@@ -23,7 +23,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
 	<td></td>
 </tr>
 <tr>
@@ -98,7 +98,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编test_user_1233的空间----1234</td>
+	<td>欢迎来test_user_1233的空间----1234</td>
 	<td></td>
 </tr>
 <tr>
@@ -163,7 +163,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
 	<td></td>
 </tr>
 </tbody></table>
