--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -128,7 +128,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编公共的空间----拣选推荐新闻、管理书签连接、朋友信息共享、组建个人网站、等等，请你帮我想想这个平台还能够做什么用？</td>
+	<td>欢迎来公共的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立个人主页--网址后加注册用户名就是个人主页，如：/tao</td>
 	<td></td>
 </tr>
 <tr>
@@ -188,7 +188,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
 	<td></td>
 </tr>
 <tr>
@@ -293,12 +293,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=大主编</td>
+	<td>link=主页</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来大主编公共的空间----拣选推荐新闻、管理书签连接、朋友信息共享、组建个人网站、等等，请你帮我想想这个平台还能够做什么用？</td>
+	<td>欢迎来公共的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立个人主页--网址后加注册用户名就是个人主页，如：/tao</td>
 	<td></td>
 </tr>
 <tr>
