fixed the but that content of team's with auth of "to team" shouldn't be visible when searching content for team's space. added test cripts.

--- a/selenium/Chinese/authority_tag_content.html
+++ b/selenium/Chinese/authority_tag_content.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://localhost/" />
-<title>visibility_of_tag_contents</title>
+<title>authority_tag_content</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">visibility_of_tag_contents</td></tr>
+<tr><td rowspan="1" colspan="3">authority_tag_content</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -22,98 +22,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>登录</td>
-	<td></td>
-</tr>
-<tr>
-	<td>open</td>
-	<td>/bigbang/bigtags</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>已注册用户请在此登录</td>
-	<td></td>
-</tr>
-<tr>
-	<td>open</td>
-	<td>/bigbang/bigtags/</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=j_username</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=j_username</td>
-	<td>tao</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=j_password</td>
-	<td>1234</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=proceed</td>
-	<td></td>
-</tr>
-<tr>
-	<td>open</td>
-	<td>/bigbang/bigtags/</td>
+	<td>verifyTextNotPresent</td>
+	<td>sexy picture</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>admin</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>阿苏阿南</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>姜姜</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>wei</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Next Page&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Page 2 of 2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>admin</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>姜姜</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>wei</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=退出登录状态</td>
+	<td>asian</td>
 	<td></td>
 </tr>
 <tr>
@@ -129,7 +44,7 @@
 <tr>
 	<td>type</td>
 	<td>id=j_username</td>
-	<td>姜姜</td>
+	<td>guy</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -143,47 +58,92 @@
 </tr>
 <tr>
 	<td>open</td>
-	<td>/bigbang/bigtags</td>
+	<td>/bigbang/guy</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>姜姜</td>
+	<td>guy_test_toteam</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>spring-roo</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>tao</td>
+	<td>guy_private</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>List results per page: 5 10 15 20 25 | Page 1 of 1</td>
+	<td>guy test public</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>List results per page: 5 10 15 20 25 | Page 1 of 1</td>
+	<td>sexy picture</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>asian</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>test_content_fromguy_toeveryone</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>test_content_visible_to_guy's team</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>test_content_visible_to_only_guy</td>
 	<td></td>
 </tr>
 <tr>
 	<td>open</td>
-	<td>/bigbang/contents</td>
+	<td>/bigbang/lady</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>姜姜 tao.mtl@hotmail.com 1234 哥是严肃的</td>
+	<td>lady_test_public</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>lady_test_toteam</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>tao </td>
+	<td>lady_test_private</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>asian</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>test_content_fromguy_toeveryone</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>test_content_visible_to_guy's team</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>test_content_visible_to_only_guy</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>sexy picture</td>
 	<td></td>
 </tr>
 <tr>
@@ -192,24 +152,19 @@
 	<td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>/bigbang/contents</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=j_username</td>
+	<td>clickAndWait</td>
+	<td>link=登录</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=j_username</td>
-	<td>admin</td>
+	<td>lady</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=j_password</td>
-	<td>2ert</td>
+	<td>1234</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -217,43 +172,63 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>tao tao@qq.com 1234 哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>姜姜 tao.mtl@hotmail.com 1234 哥是严肃的</td>
+	<td>open</td>
+	<td>/bigbang/lady</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>exact:网页内容标题 *</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=List all Big Tags</td>
+	<td>lady_test_toteam</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>姜姜</td>
+	<td>lady_test_private</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>test_user_1244</td>
+	<td>lady_test_public</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>spring-roo</td>
+	<td>guy test public</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>guy_test_toteam</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>guy_private</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>tag_of_TestUser1233</td>
+	<td>sexy picture</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>asian</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>test_content_visible_to_guy's team</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>test_content_visible_to_only_guy</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>test_content_fromguy_toeveryone</td>
 	<td></td>
 </tr>
 <tr>
@@ -261,11 +236,7 @@
 	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>主页 | 登录 | 界面风格: standard | alt</td>
-	<td></td>
-</tr>
+
 </tbody></table>
 </body>
 </html>
