added function of transfering balance when hire and fire a editor. optimized resource. also added a String field for account for layout setting.
it's about time to add layout and twitter?

All honor to our dear God!

--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -128,7 +128,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来公共的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立个人主页--网址后加注册用户名就是个人主页，如：/tao</td>
+	<td>跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
 	<td></td>
 </tr>
 <tr>
@@ -293,12 +293,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=主页</td>
+	<td>link=我的主页</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来公共的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立个人主页--网址后加注册用户名就是个人主页，如：/tao</td>
+	<td>欢迎来tao的空间----哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
 	<td></td>
 </tr>
 <tr>
