--- a/selenium/Chinese/mainpage_display.html
+++ b/selenium/Chinese/mainpage_display.html
@@ -18,7 +18,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来公共的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立个人主页--网址后加注册用户名就是个人主页，如：/tao</td>
+	<td>跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
 	<td></td>
 </tr>
 <tr>
