--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -217,6 +217,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=25</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>tao tao@qq.com 1234 哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
 	<td></td>
@@ -263,7 +268,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>主页 | 登录 | 界面风格: standard | alt</td>
+	<td>主页 | 登录 | 语言: Français - English - 中文 | 界面风格: standard - alt</td>
 	<td></td>
 </tr>
 </tbody></table>
