--- a/selenium/Chinese/hire_fire_editor.html
+++ b/selenium/Chinese/hire_fire_editor.html
@@ -43,12 +43,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>这家伙很棒，雇他为我的个人主页工作</td>
+	<td>这家伙很棒，雇他为我的空间工作</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=这家伙很棒，雇他为我的个人主页工作</td>
+	<td>link=这家伙很棒，雇他为我的空间工作</td>
 	<td></td>
 </tr>
 <tr>
@@ -88,7 +88,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>这家伙很棒，雇他为我的个人主页工作</td>
+	<td>这家伙很棒，雇他为我的空间工作</td>
 	<td></td>
 </tr>
 <tr>
@@ -113,7 +113,7 @@
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>这家伙很棒，雇他为我的个人主页工作</td>
+	<td>这家伙很棒，雇他为我的空间工作</td>
 	<td></td>
 </tr>
 <tr>
@@ -158,7 +158,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>这家伙很棒，雇他为我的个人主页工作</td>
+	<td>这家伙很棒，雇他为我的空间工作</td>
 	<td></td>
 </tr>
 <tr>
