--- a/selenium/Chinese/authority_tag_content.html
+++ b/selenium/Chinese/authority_tag_content.html
@@ -207,12 +207,12 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>sexy picture</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>asian</td>
 	<td></td>
 </tr>
@@ -236,7 +236,6 @@
 	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
