--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -148,11 +148,6 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>姜姜</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
 	<td>spring-roo</td>
 	<td></td>
 </tr>
@@ -178,7 +173,17 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>姜姜 tao.mtl@hotmail.com 1234 哥是严肃的</td>
+	<td>paas 姜姜 0</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>工作 姜姜 1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>spring-roo 姜姜 1</td>
 	<td></td>
 </tr>
 <tr>
