bug fixing (added soemting in end, so I know when should a tags string shown.

--- a/selenium/Chinese/authority_tag_content.html
+++ b/selenium/Chinese/authority_tag_content.html
@@ -22,6 +22,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>open</td>
+	<td>/bigbang/guy</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextNotPresent</td>
 	<td>sexy picture</td>
 	<td></td>
@@ -214,6 +219,11 @@
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>asian</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>tag_guy_public</td>
 	<td></td>
 </tr>
 <tr>
