--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -273,7 +273,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>主页 | 登录 | 语言: Français - English - 中文 | 界面风格: standard - alt</td>
+	<td>主页 | 登录 | 语言: Français - English - 中文</td>
 	<td></td>
 </tr>
 </tbody></table>
