--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>发布新的内容</td>
+	<td>添加新的内容</td>
 	<td></td>
 </tr>
 <tr>
@@ -163,7 +163,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>发布新的内容</td>
+	<td>添加新的内容</td>
 	<td></td>
 </tr>
 <tr>
@@ -198,7 +198,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>发布新的内容</td>
+	<td>添加新的内容</td>
 	<td></td>
 </tr>
 <tr>
