--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -118,7 +118,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=登录</td>
+	<td>link=用户登录</td>
 	<td></td>
 </tr>
 <tr>
@@ -273,7 +273,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>主页 | 登录 | 语言: Français - English - 中文</td>
+	<td>用户注册 | 用户登录 | 语言: Français - English - 中文</td>
 	<td></td>
 </tr>
 </tbody></table>
