--- a/selenium/Chinese/authority_tag_content.html
+++ b/selenium/Chinese/authority_tag_content.html
@@ -38,7 +38,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=登录</td>
+	<td>link=用户登录</td>
 	<td></td>
 </tr>
 <tr>
@@ -158,7 +158,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=登录</td>
+	<td>link=用户登录</td>
 	<td></td>
 </tr>
 <tr>
