--- a/selenium/Chinese/visibility_balance.html
+++ b/selenium/Chinese/visibility_balance.html
@@ -53,7 +53,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=登录</td>
+	<td>link=用户登录</td>
 	<td></td>
 </tr>
 <tr>
@@ -106,7 +106,6 @@
 	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
