fixed the bug, add default tags for new user.

--- a/selenium/Chinese/customize_layout.html
+++ b/selenium/Chinese/customize_layout.html
@@ -232,16 +232,6 @@
 	<td>tao@qq.com</td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=_layout_id</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=_layout_id</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
 	<td>id=proceed</td>
 	<td></td>
@@ -254,6 +244,11 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>link=我的主页</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;以默认顺序显示所有的标签&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -381,7 +376,6 @@
 	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
