added capital test script fixed some bug about capital...

--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -173,17 +173,17 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>paas 姜姜 0</td>
+	<td>paas</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>工作 姜姜 1</td>
+	<td>工作</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>spring-roo 姜姜 1</td>
+	<td>spring-roo</td>
 	<td></td>
 </tr>
 <tr>
@@ -228,12 +228,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>tao tao@qq.com 1234 哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
+	<td>tao</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>姜姜 tao.mtl@hotmail.com 1234 哥是严肃的</td>
+	<td>姜姜</td>
 	<td></td>
 </tr>
 <tr>
