--- a/selenium/Chinese/capital_test.html
+++ b/selenium/Chinese/capital_test.html
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来TAo_1的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
+	<td>欢迎来TAO_1的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
 	<td></td>
 </tr>
 <tr>
@@ -138,7 +138,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来Tao_1的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
+	<td>欢迎来TAO_1的空间----跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
 	<td></td>
 </tr>
 <tr>
@@ -193,7 +193,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>欢迎来AdMin的空间----this is the administrator account</td>
+	<td>跟朋友分享有趣新闻、分类管理书签链接、团队协作、建立能自动更新的个人主页（网址后加注册用户名就是个人主页），就是这儿了！</td>
 	<td></td>
 </tr>
 <tr>
@@ -276,7 +276,6 @@
 	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
