fix the capital issue in jspx, and tagx

--- a/selenium/Chinese/capital_test.html
+++ b/selenium/Chinese/capital_test.html
@@ -233,6 +233,81 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>link=我的主页</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;管理我的标签&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>TAO_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input.image</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>您确定要删除?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>TAO_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input.image</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>您确定要删除?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>TAO_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input.image</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>您确定要删除?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>TAO_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input.image</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>您确定要删除?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextNotPresent</td>
+	<td>TAO_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>link=退出登录状态</td>
 	<td></td>
 </tr>
