added remember me function.

--- a/selenium/Chinese/capital_test.html
+++ b/selenium/Chinese/capital_test.html
@@ -242,67 +242,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>TAO_1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=input.image</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertConfirmation</td>
-	<td>您确定要删除?</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>TAO_1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=input.image</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertConfirmation</td>
-	<td>您确定要删除?</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>TAO_1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=input.image</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertConfirmation</td>
-	<td>您确定要删除?</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>TAO_1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=input.image</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertConfirmation</td>
-	<td>您确定要删除?</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextNotPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>TAO_1</td>
 	<td></td>
 </tr>
