--- a/selenium/Chinese/cookie_test.html
+++ b/selenium/Chinese/cookie_test.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://localhost/" />
-<title>AddContent</title>
+<title>cookie_test</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">AddContent</td></tr>
+<tr><td rowspan="1" colspan="3">cookie_test</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -18,12 +18,117 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>link=用户登录</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
+	<td>id=j_rememberme</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>退出登录状态</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=我的主页</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>-欢迎来tao的空间----哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=退出登录状态</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=用户登录</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>你的登录过程未能成功, 请查看原因后再次尝试。原因： The user dose not exist. Please check the input and try again. .</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/bigbang/</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=用户登录</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
 	<td>id=j_username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=j_password</td>
+	<td>2ert</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=j_rememberme</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Create new Circle</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>List all Circles</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Create new Remark</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>List all Twitters</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Create new Twitter</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=退出登录状态</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=用户登录</td>
 	<td></td>
 </tr>
 <tr>
@@ -42,128 +147,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=_title_id</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=_title_id</td>
-	<td>test123455</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=_sourceURL_id</td>
-	<td>http://localhost/testData</td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
-	<td>id=proceed</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
+	<td>link=我的主页</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>test123455</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=test123455</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>test1234567888</td>
-	<td></td>
-</tr>
-<tr>
-	<td>open</td>
-	<td>/bigbang/</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>退出登录状态</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=退出登录状态</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>test123455</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=j_username</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=j_username</td>
-	<td>admin</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=j_password</td>
-	<td>2ert</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=proceed</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>添加新的内容</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>List all Contents</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Create new Content</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Content</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=List all Contents</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>test123455</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=//input[@value=&quot;Delete Content&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>test123455</td>
+	<td>欢迎来tao的空间----哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
 	<td></td>
 </tr>
 <tr>
