fixed a bug that chinese name can not saved into cookie.

--- a/selenium/Chinese/add_remove_content.html
+++ b/selenium/Chinese/add_remove_content.html
@@ -162,6 +162,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertConfirmation</td>
+	<td>您确定要删除?</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextNotPresent</td>
 	<td>test123455</td>
 	<td></td>
