--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -248,7 +248,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=//input[@value=&quot;Delete Big Tag&quot;]</td>
+	<td>css=input.image</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>您确定要删除?</td>
 	<td></td>
 </tr>
 <tr>
