fixed the bug that can not login with cookie, the root cause was shouldn't use getContentPath to get the path string, should use just a "\" as path string, because on localhost, the default value of path will be set as "\bigbang\resource\", if use getContentPath, it will be "\bigbang". While, on rhcloud, if use getContentPath, will get a string like "\resource" that kill my 2 days ):

--- a/selenium/Chinese/cookie_test.html
+++ b/selenium/Chinese/cookie_test.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>-欢迎来tao的空间----哥就喜欢把有用的链接都收集起来，将来用时找起来方便。</td>
+	<td>欢迎来tao的空间--</td>
 	<td></td>
 </tr>
 <tr>
