modified some scipt. script for twitter not added yet. found a bug with script :when log out, relayout was called, donno why.

--- a/selenium/Chinese/add_remove_content.html
+++ b/selenium/Chinese/add_remove_content.html
@@ -18,7 +18,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
@@ -103,7 +103,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
