--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -17,18 +17,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyTextPresent</td>
+	<td>想做个祈祷，记个日志，表达想法，总结经验？写在这里跟家人朋友交流！</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>猛击这里跟朋友家人分享！</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=div.dijitTitlePaneTitleFocus</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=span.dijitTitlePaneTextNode</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
@@ -112,11 +112,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyValue</td>
-	<td>id=_publisher_id</td>
-	<td>admin</td>
-</tr>
-<tr>
 	<td>verifyTextPresent</td>
 	<td>退出登录状态</td>
 	<td></td>
@@ -124,6 +119,16 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>link=退出登录状态</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>已注册用户请在此登录</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
 	<td></td>
 </tr>
 <tr>
@@ -138,7 +143,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
@@ -193,7 +198,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
@@ -208,7 +213,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
@@ -268,7 +278,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我来加一个！</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
