--- a/selenium/Chinese/customize_layout.html
+++ b/selenium/Chinese/customize_layout.html
@@ -178,7 +178,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>对哪些人可见</td>
+	<td>谁可以看见</td>
 	<td></td>
 </tr>
 <tr>
@@ -193,12 +193,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Tag Name</td>
+	<td>名称 *</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>权限</td>
+	<td>谁可以看见</td>
 	<td></td>
 </tr>
 <tr>
