--- a/selenium/Chinese/hire_fire_editor.html
+++ b/selenium/Chinese/hire_fire_editor.html
@@ -78,6 +78,11 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>link=test_user_1244</td>
 	<td></td>
 </tr>
@@ -139,6 +144,11 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>link=退出登录状态</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=a[name=&quot;主页&quot;] &gt; img</td>
 	<td></td>
 </tr>
 <tr>
