--- a/selenium/Chinese/mainpage_display.html
+++ b/selenium/Chinese/mainpage_display.html
@@ -33,7 +33,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>我来加一个！</td>
+	<td>想做个祈祷，记个日志，表达想法，总结经验？写在这里跟家人朋友交流！</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>猛击这里跟朋友家人分享！</td>
 	<td></td>
 </tr>
 <tr>
