selenium tests Remark tostring, return the whole content instead of substring of it.
problem still, the table display only a part of the remark.
selenium scripts of diary function not added.

--- a/selenium/Chinese/capital_test.html
+++ b/selenium/Chinese/capital_test.html
@@ -118,7 +118,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=TAo_1的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -188,7 +188,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=AdMin的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -233,7 +233,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=AdMin的空间</td>
 	<td></td>
 </tr>
 <tr>
