--- a/selenium/Chinese/cookie_test.html
+++ b/selenium/Chinese/cookie_test.html
@@ -38,7 +38,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -113,7 +113,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>List all Twitters</td>
+	<td>List all Twitter</td>
 	<td></td>
 </tr>
 <tr>
@@ -148,7 +148,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
