--- a/selenium/Chinese/customize_layout.html
+++ b/selenium/Chinese/customize_layout.html
@@ -48,7 +48,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -183,7 +183,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -203,7 +203,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -238,7 +238,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -268,17 +268,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>link=tao的空间</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>xpath=(//a[contains(text(),'&gt;&gt;&gt;')])[3]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=我的主页</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>xpath=(//a[contains(text(),'&gt;&gt;&gt;')])[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -288,7 +283,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
