--- a/selenium/Chinese/hire_fire_editor.html
+++ b/selenium/Chinese/hire_fire_editor.html
@@ -38,17 +38,17 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>不再需要他了，抱歉！</td>
+	<td>不再关注</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>这家伙很棒，雇他为我的空间工作</td>
+	<td>添加到我的空间</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=这家伙很棒，雇他为我的空间工作</td>
+	<td>link=添加到我的空间</td>
 	<td></td>
 </tr>
 <tr>
@@ -87,13 +87,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextNotPresent</td>
-	<td>不再需要他了，抱歉！</td>
+	<td>verifyTextPresent</td>
+	<td>添加到我的空间</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>这家伙很棒，雇他为我的空间工作</td>
+	<td>verifyTextNotPresent</td>
+	<td>不再关注</td>
 	<td></td>
 </tr>
 <tr>
@@ -118,17 +118,17 @@
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>这家伙很棒，雇他为我的空间工作</td>
+	<td>添加到我的空间</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>不再需要他了，抱歉！</td>
+	<td>不再关注</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=不再需要他了，抱歉！</td>
+	<td>link=不再关注</td>
 	<td></td>
 </tr>
 <tr>
@@ -163,12 +163,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>不再需要他了，抱歉！</td>
+	<td>不再关注</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>这家伙很棒，雇他为我的空间工作</td>
+	<td>添加到我的空间</td>
 	<td></td>
 </tr>
 <tr>
