--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>添加新的内容</td>
+	<td>添加内容</td>
 	<td></td>
 </tr>
 <tr>
@@ -168,7 +168,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>添加新的内容</td>
+	<td>添加内容</td>
 	<td></td>
 </tr>
 <tr>
@@ -203,7 +203,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>添加新的内容</td>
+	<td>添加内容</td>
 	<td></td>
 </tr>
 <tr>
@@ -308,7 +308,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=我的主页</td>
+	<td>link=tao的空间</td>
 	<td></td>
 </tr>
 <tr>
