--- a/selenium/Chinese/mainpage_display.html
+++ b/selenium/Chinese/mainpage_display.html
@@ -153,7 +153,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=&gt;&gt;&gt;</td>
+	<td>xpath=(//a[contains(text(),'&gt;&gt;&gt;')])[2]</td>
 	<td></td>
 </tr>
 <tr>
