trival bug fixing

--- a/selenium/Chinese/customize_layout.html
+++ b/selenium/Chinese/customize_layout.html
@@ -224,7 +224,7 @@
 <tr>
 	<td>verifyValue</td>
 	<td>id=_email_id</td>
-	<td>tao@qq.com</td>
+	<td>tao.mtl@hotmail.com</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
