让添加命令按钮居左显示，因为classnew让行高太矮，就没有再用。

--- a/selenium/Chinese/add_remove_tag.html
+++ b/selenium/Chinese/add_remove_tag.html
@@ -18,17 +18,17 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>想做个祈祷，记个日志，表达想法，总结经验？写在这里跟家人朋友交流！</td>
+	<td>祈祷，笔记，备忘</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>猛击这里跟朋友家人分享！</td>
+	<td>新闻，资料，图像，书签</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=猛击这里跟朋友家人分享！</td>
+	<td>link=新闻，资料，图像，书签</td>
 	<td></td>
 </tr>
 <tr>
@@ -143,7 +143,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=猛击这里跟朋友家人分享！</td>
+	<td>link=新闻，资料，图像，书签</td>
 	<td></td>
 </tr>
 <tr>
@@ -198,7 +198,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=猛击这里跟朋友家人分享！</td>
+	<td>link=新闻，资料，图像，书签</td>
 	<td></td>
 </tr>
 <tr>
@@ -218,7 +218,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=猛击这里跟朋友家人分享！</td>
+	<td>link=新闻，资料，图像，书签</td>
 	<td></td>
 </tr>
 <tr>
@@ -283,7 +283,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=猛击这里跟朋友家人分享！</td>
+	<td>link=新闻，资料，图像，书签</td>
 	<td></td>
 </tr>
 <tr>
