modifid some xpath.

--- a/selenium/Chinese/customize_layout.html
+++ b/selenium/Chinese/customize_layout.html
@@ -272,6 +272,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyTextNotPresent</td>
+	<td>震惊 美国大使馆密电提前获中国反导情报</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>xpath=(//a[contains(text(),'&gt;&gt;&gt;')])[3]</td>
 	<td></td>
@@ -288,7 +293,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>xpath=(//input[@id='j_username'])[2]</td>
+	<td>xpath=//div[@id='main']/div/table[2]/tbody/tr/td/div[2]/div[2]/div/div/table/tbody/tr[9]/td/form/input</td>
 	<td>10</td>
 </tr>
 <tr>
@@ -303,7 +308,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>xpath=(//input[@id='j_username'])[2]</td>
+	<td>xpath=//div[@id='main']/div/table/tbody/tr/td/div[2]/div[2]/div/div/table/tbody/tr[10]/td/form/input</td>
 	<td>0</td>
 </tr>
 <tr>
@@ -318,7 +323,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>xpath=(//input[@id='j_username'])[2]</td>
+	<td>xpath=//div[@id='main']/div/table/tbody/tr/td/div[2]/div[2]/div/div/form/input</td>
 	<td>-1</td>
 </tr>
 <tr>
@@ -338,17 +343,17 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=j_username</td>
+	<td>xpath=//table/tbody/tr/td/div/div[2]/div/div/table/tbody/tr[9]/td/form/input</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=j_username</td>
+	<td>xpath=//table/tbody/tr/td/div/div[2]/div/div/table/tbody/tr[9]/td/form/input</td>
 	<td>300</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=div.dijitTooltipConnector</td>
+	<td>xpath=(//button[@id='proceed'])[1]</td>
 	<td></td>
 </tr>
 <tr>
