--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -273,7 +273,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>用户注册 | 用户登录 | Français - English - 中文社区</td>
+	<td>用户注册 | 用户登录 | Communauté française - English Community - 中文社区</td>
 	<td></td>
 </tr>
 </tbody></table>
