--- a/selenium/Chinese/customize_layout.html
+++ b/selenium/Chinese/customize_layout.html
@@ -163,22 +163,22 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>exact:网页内容标题 *</td>
+	<td>标题</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>exact:公共空间标签 *</td>
+	<td>公共空间</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>个人空间标签</td>
+	<td>个人空间</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>谁可以看见</td>
+	<td>安全等级</td>
 	<td></td>
 </tr>
 <tr>
