--- a/selenium/Chinese/visibility_of_tag_contents.html
+++ b/selenium/Chinese/visibility_of_tag_contents.html
@@ -238,7 +238,27 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>exact:网页内容标题 *</td>
+	<td>采编</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>公共空间</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>个人空间</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>安全等级</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>标题</td>
 	<td></td>
 </tr>
 <tr>
